tests/fixtures/invalid/duplicate-role.nml
// Duplicate roleTemplate declarations for the same name
roleTemplate @role/admin:
    label = "Admin"

roleTemplate @role/admin:
    label = "Duplicate Admin"
